--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts --fix ./src",
+    "lint:fix": "eslint --fix ./src",
     "format": "prettier --write ./src",
-    "ci:format": "prettier --check ./src"
+    "ci:format": "prettier --check ./src",
+    "precommit": "lint-staged",
+    "prepare": "husky .husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run precommit"
+    }
+  },
+  "lint-staged": {
+    "{**/*.js,!(node_modules/**)}": [
+      "eslint --fix"
+    ]
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -18,8 +31,11 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
+    "validate-branch-name": "^1.3.0",
     "vite": "^5.2.0"
   }
 }
