--- a/.validate-branch-namerc.json
+++ b/.validate-branch-namerc.json
@@ -1,4 +1,4 @@
 {
-  "pattern": "(feat|fix|refactor)/(RSS-PZ-d+_)[a-zA-Z-]+",
+  "pattern": "^(docs|chore|feat|fix|refactor|style|test){1}/d{2}_[[:alpha:]]+[[:alpha:]|-|_]+",
   "errorMsg": "Branch name doesn't follow the defined repository rules"
 }
